new hole bugs improvements

--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -256,6 +256,7 @@
       let blockValues = new Block(1).values
       let payload = {
         numOfBugs: 1,
+        numTrials: blockValues.num_trials,
         iti: blockValues.iti,
         trialDuration: blockValues.trial_duration,
         speed: blockValues.bug_speed,
