--- a/Arena/templates/management/stream.html
+++ b/Arena/templates/management/stream.html
@@ -6,7 +6,11 @@
     <div class="col text-center">
         <select id="selectStreamCamera" class="form-control col-sm-3 mx-auto mb-2">
             {% for cam in cameras %}
-            <option value="{{cam}}">{{cam}}</option>
+                {% if cam == 'stream' %}
+                    <option value="{{cam}}" selected>{{cam}}</option>
+                {% else %}
+                    <option value="{{cam}}">{{cam}}</option>
+                {% endif %}
             {% endfor %}
         </select>
         <button id="stream" type="button" class="btn btn-lg btn-primary mr-2">Stream</button>
