--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -190,7 +190,9 @@
         <div class="col">
             <button type="submit" class="btn btn-primary mr-1">Start</button>
             <button id="stopExperiment" type="button" class="btn btn-outline-danger mr-3">Stop Experiment</button>
-            <button id="saveExperiment" type="button" class="btn btn-outline-info mr-1">Save</button>
+            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#saveExperimentModal">
+                Save
+            </button>
             <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#loadExperimentModal">
                 Load
             </button>
@@ -225,6 +227,31 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button id="loadExperiment" type="button" class="btn btn-primary">Load</button>
             </div>
+        </div>
+    </div>
+</div>
+
+<!-- Save Experiment -->
+<div class="modal fade" id="saveExperimentModal" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="saveModalLabel">Save Experiment</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form>
+                <div class="modal-body">
+                    <label for="saveExperimentName">Please enter name for saved experiment</label>
+                    <input type="text" class="form-control" id="saveExperimentName" required />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button id="saveExperiment" type="button" class="btn btn-primary">Save</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
