--- a/Arena/templates/explore.html
+++ b/Arena/templates/explore.html
@@ -27,7 +27,7 @@
 
         <div class="mt-3">
             <label for="animalId">Animal ID</label>
-            <input id="animalId" type="number" class="form-control col-sm-3"/>
+            <select id="animalId" class="form-control col-sm-3"></select>
         </div>
 
         <div class="mt-3">
@@ -90,7 +90,7 @@
           start_date: $("#startDate").val(),
           end_date: $("#endDate").val(),
           bug_types: $("#bugType").val(),
-          animal_id: Number($("#animalId").val()),
+          animal_id: $("#animalId").val(),
           num_of_strikes: Number($("#minStrikes").val()),
           movement_type: $("#movementType").val(),
           experiment_dir: $("#experimentDir").val(),
@@ -108,6 +108,29 @@
         }
       })
   })
+  $('#experimentDir').change(function() {
+    $.ajax({
+        url: "/animal_ids",
+        type: "POST",
+        data: JSON.stringify({
+          experiment_dir: $('#experimentDir').val()
+        }),
+        contentType: "application/json",
+        success: function (animalIds) {
+          console.log(animalIds)
+          animalIds = animalIds.sort((a,b) => Number(a) - Number(b))
+            let $el = $("#animalId");
+            $el.empty() // remove old options
+            $.each(animalIds, function(key, value) {
+              $el.append($("<option></option>")
+                 .attr("value", value).text(value))
+            })
+        },
+        error: function (data) {
+          $("#results-div").html(data.responseText)
+        }
+      })
+  }).trigger('change')
 </script>
 
 <style>
