--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -94,6 +94,12 @@
                             </select>
                         </div>
                     </div>
+                    <div class="form-group row pr-3">
+                        <label for="rewardAnyTouchProb{{i}}" class="col col-form-label">Any Touch Reward Probability</label>
+                        <div class="col-sm-5">
+                            <input type="number" step=0.01 max=1 min=0 class="form-control" id="rewardAnyTouchProb{{i}}" value="0" required>
+                        </div>
+                    </div>
                     <div class="form-group row pr-3 bugs-options{{i}}" id="exitHolePosition{{i}}">
                         <label for="exitHolePositionSelect{{i}}" class="col col-form-label">Exit Hole Position</label>
                         <div class="col">
