--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -8,6 +8,8 @@
     <script crossorigin="anonymous"
             integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <link href="{{ url_for('static', filename='bootstrap-4.5.0/css/bootstrap.css')}}" rel="stylesheet">
     <script src="{{ url_for('static', filename='Bootstrap-4-Multi-Select-BsMultiSelect/dist/js/BsMultiSelect.js') }}"
             type="text/javascript"></script>
@@ -30,7 +32,6 @@
     </div>
     <div class="col">
         {% include "management/stream.html" %}
-        <pre id="notifications-board"></pre>
     </div>
     {% include "management/footer.html" %}
 </div>
@@ -51,26 +52,49 @@
         })
 
         const maxBlocks = Number("{{max_blocks}}")
+        const cameras = "{{ cameras|join(',') }}".split(',')
         const $numBlocks = $("#numBlocks")
-        checkCurrentExperiment()
-        // Test cameras
-        $.get('/check_cameras', function (data) {
-            data = JSON.parse(data)
-            let text = data && data.length > 0 ? `missing cameras: ${data}` : 'Cameras are OK'
-            // appendOutput(text)
-        })
+        const apiCheckTimeout = 1000
 
+        let isToggleCheckPause = false
         let api_check = function () {
             $.ajax({
                 url: '/check',
                 type: 'GET',
-                success: function (txt) {
-                    $("#notifications-board").text(txt)
-                    setTimeout(api_check, 1)
+                success: function (data) {
+                    if (!isToggleCheckPause) {
+                        for (let cam_name in data['cam_units_status']) {
+                            let tog = $(`#toggle-${cam_name}`)
+                            if (data['cam_units_status'][cam_name] !== tog.prop('checked')) {
+                                tog.bootstrapToggle('toggle')
+                            }
+                        }
+                    }
+                    let expName = data['experiment_name']
+                    let blockId = data['block_id']
+                    $("#currentExperimentName").text(expName ? `Current Experiment: ${expName}` : 'No experiment is running')
+                    $("#currentBlockID").text(expName ? `Block ID: ${blockId}` : '')
+                    $("#startExperimentButton").prop('disabled', !!expName)
+                    setTimeout(api_check, apiCheckTimeout)
                 }
             })
         }
         api_check()
+
+        cameras.forEach((cam) => {
+            $(`#toggle-${cam}`).change((res) => {
+                isToggleCheckPause = true
+                let onRequested = $(`#toggle-${cam}`).prop('checked')
+                let url = onRequested ? '/start_camera_unit' : '/stop_camera_unit'
+                $(`#camera-${cam}`).prop('disabled', !onRequested)
+
+                $.post(url, {camera: cam}).done(function () {
+                    setTimeout(() => {
+                        isToggleCheckPause = false
+                    }, apiCheckTimeout)
+                })
+            })
+        })
 
         // Number of blocks listener
         $numBlocks.change(() => {
@@ -163,10 +187,10 @@
 
         $("#stopExperiment").click(function () {
             $.get('/stop_experiment', function (data) {
-                appendOutput(data)
-                appendOutput('wait for trial to finish...')
+                console.log(data)
+                console.log('wait for trial to finish...')
                 $.get('/get_experiment', function (data) {
-                    appendOutput(data)
+                    console.log(data)
                 });
             })
         });
@@ -179,13 +203,13 @@
                 data: JSON.stringify(AllFields.values),
                 contentType: "application/json",
                 beforeSend: function () {
-                    appendOutput('>> initializing experiment...')
+                    console.log('>> initializing experiment...')
                 },
                 success: function (res) {
                     checkCurrentExperiment()
                 },
                 error: function (data) {
-                    appendOutput(data.responseText)
+                    console.log(data.responseText)
                 }
             })
         });
@@ -199,14 +223,14 @@
                 data: JSON.stringify(params),
                 contentType: "application/json",
                 beforeSend: function () {
-                    appendOutput('>> saving experiment...')
+                    console.log('>> saving experiment...')
                 },
                 success: function (res) {
-                    appendOutput(`>> experiment ${params.name} was saved successfully`)
+                    console.log(`>> experiment ${params.name} was saved successfully`)
                     $('#saveExperimentModal').modal('toggle');
                 },
                 error: function (data) {
-                    appendOutput(data.responseText)
+                    console.log(data.responseText)
                     $('#saveExperimentModal').modal('toggle');
                 }
             })
@@ -227,41 +251,34 @@
                 url: "/record",
                 type: "POST",
                 data: JSON.stringify(Object.assign({
-                    exposure: Number($("#exposure").val()),
                     folder_prefix: $("#videoOutputPrefix").val(),
                     cameras: Cameras.value,
                     is_use_predictions: $("#use_predictions").is(":checked")
                 }, getAcquireStop())),
                 contentType: "application/json",
                 beforeSend: function () {
-                    appendOutput('recording...')
+                    console.log('recording...')
                 },
                 complete: function (res) {
-                    appendOutput(res.responseText)
+                    console.log(res.responseText)
                 }
             })
         });
         $("#stopRecord").click(function () {
             $.get("/manual_record_stop", function (data) {
-                appendOutput(data)
+                console.log(data)
             })
         })
 
-        const AcquireStopWithValue = ['num_frames', 'record_time'];
         let $acquireStopSelect = $("#acquireStopSelect")
         $acquireStopSelect.change(function (e) {
-            let isValued = AcquireStopWithValue.includes($acquireStopSelect.val());
             let acqValue = $("#acquireStopValue");
-            if (isValued) {
-                acqValue.show()
-            } else {
-                acqValue.hide()
-            }
+            acqValue.show()
             acqValue.prop('required', isValued);
         })
         $("#camerasInfo").click(function () {
             $.get('/cameras_info', function (data) {
-                appendOutput(data)
+                console.log(data)
             })
         })
 
@@ -276,7 +293,7 @@
                 }),
                 contentType: "application/json",
                 complete: function (res) {
-                    appendOutput(`>> Video ${video} started manually`)
+                    console.log(`>> Video ${video} started manually`)
                 }
             })
         })
@@ -309,28 +326,28 @@
                 data: JSON.stringify(payload),
                 contentType: "application/json",
                 complete: function (res) {
-                    appendOutput('>> Bugs initiated manually')
+                    console.log('>> Bugs initiated manually')
                 }
             })
         })
         $("#hide_bugs").click(function (e) {
             $.get('/hide_bugs')
-            appendOutput('>> Bugs stopped manually')
+            console.log('>> Bugs stopped manually')
         })
         $("#calibrate").click(function (e) {
             $.get('/calibrate', function (data) {
-                appendOutput(`>> Calibration: ${data}`)
+                console.log(`>> Calibration: ${data}`)
             })
         })
 
         $("#reloadApp").click(function (e) {
             $.get('/reload_app')
-            appendOutput('>> App reload command sent manually')
+            console.log('>> App reload command sent manually')
         })
 
         $("#reward").click(function (e) {
             $.get('/reward', function (data) {
-                appendOutput('>> Reward sent manually')
+                console.log('>> Reward sent manually')
             })
         })
 
@@ -393,11 +410,6 @@
             })
         }
 
-        function checkCurrentExperiment() {
-            $.get('/get_experiment', function (data) {
-                $("#currentExperimentName").text(data)
-            })
-        }
     })
 </script>
 
@@ -415,21 +427,26 @@
         z-index: -5;
     }
 
-    #notifications-board {
-        position: relative;
-        top: 3em;
-        left: 3em;
-        height: 250px;
-        width: 450px;
-        background-color: lightgray;
-    }
-
     #controls-panel {
         border-top: 1.5px solid black;
         border-bottom: 1.5px solid black;
         padding-top: 1em;
         padding-bottom: 1em;
     }
+
+    .toggle {
+        margin-left: 1em;
+    }
+
+    .cams-labels {
+        margin-bottom: 2px;
+        width: 3em;
+    }
+
+    #record-output {
+        white-space: pre-wrap;
+    }
+
 </style>
 
 </html>
