--- a/Arena/templates/management/cameras_record.html
+++ b/Arena/templates/management/cameras_record.html
@@ -4,9 +4,10 @@
             <h3>Cameras</h3>
             {% for cam in cameras %}
             <div class="row ml-4" id="cams-checkboxes">
-                <input class="form-check-input" type="checkbox" value="{{cam}}" id="camera-{{cam}}"
-                       {% if cam not in ['stream','top'] %} checked{% endif %}>
-                <label class="form-check-label" for="camera-{{cam}}">{{cam}}</label>
+                <input class="form-check-input" type="checkbox" value="{{cam}}" id="camera-{{cam}}" disabled>
+                <label class="form-check-label cams-labels" for="camera-{{cam}}">{{cam}}</label>
+                <input id="toggle-{{cam}}" type="checkbox" checked data-toggle="toggle"
+                       data-onstyle="success" data-offstyle="danger" data-size="xs" data-height="25">
             </div>
             {% endfor %}
             <div class="row ml-4 mt-3">
@@ -19,12 +20,6 @@
         <form class="col" id="record_form">
             <h3>Record</h3>
             <div class="form-group row">
-                <label for="exposure" class="col col-form-label">Exposure Time</label>
-                <div class="col-sm-5">
-                    <input type="number" class="form-control" id="exposure" value="{{exposure}}" required>
-                </div>
-            </div>
-            <div class="form-group row">
                 <label for="videoOutputPrefix" class="col col-form-label">Folder Prefix</label>
                 <div class="col-sm-7">
                     <input type="text" class="form-control" id="videoOutputPrefix">
@@ -35,7 +30,7 @@
                 <div class="col">
                     <select id="acquireStopSelect" class="form-control col">
                         {% for val, label in acquire_stop.items() %}
-                        <option value="{{val}}">{{label}}</option>
+                            <option value="{{val}}">{{label}}</option>
                         {% endfor %}
                     </select>
                 </div>
