--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -194,7 +194,7 @@
 
     <div class="row mt-3">
         <div class="col">
-            <button type="submit" class="btn btn-primary mr-1">Start</button>
+            <button id="startExperimentButton" type="submit" class="btn btn-primary mr-1">Start</button>
             <button id="stopExperiment" type="button" class="btn btn-outline-danger mr-3">Stop Experiment</button>
             <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#saveExperimentModal">
                 Save
@@ -204,10 +204,12 @@
             </button>
         </div>
     </div>
-    <div class="col">
-        <div class="row"><b>Current Experiment Name:</b></div>
+
+    <div style="margin-top: 1em; margin-left: 1em">
         <div class="row" id="currentExperimentName"></div>
+        <div class="row" id="currentBlockID"></div>
     </div>
+
 </form>
 
 <!-- Load Experiment -->
