--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -1,51 +1,60 @@
-<div class="col-md-3" id="events_column">
-    <h3 style="text-align: center; margin-bottom: 1em">Events</h3>
+<div class="col" id="events_column">
+    <h4 style="text-align: center;">Events</h4>
     <div class="row mb-1" id="leds-div">
-        <h4 class="col ml-2">LED:</h4>
+        <h7 class="col ml-2">LED:</h7>
         <div class="col ml-5">
-            <button id="led_light_on" type="button" class="btn btn-lg btn-primary">ON</button>
+            <button id="led_light_on" type="button" class="btn btn-sm btn-primary">ON</button>
         </div>
         <div class="col ml-2">
-            <button id="led_light_off" type="button" class="btn btn-lg btn-outline-danger">OFF</button>
+            <button id="led_light_off" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
+        </div>
+    </div>
+    <div class="row mb-1" id="heat-div">
+        <h7 class="col ml-2">Heat:</h7>
+        <div class="col ml-5">
+            <button id="heat_light_on" type="button" class="btn btn-sm btn-primary">ON</button>
+        </div>
+        <div class="col ml-2">
+            <button id="heat_light_off" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
         </div>
     </div>
     <div class="row mb-1" id="display-div">
-        <h4 class="col ml-2">Display:</h4>
+        <h7 class="col ml-2">Display:</h7>
         <div class="col ml-5">
-            <button id="display_on" type="button" class="btn btn-lg btn-primary">ON</button>
+            <button id="display_on" type="button" class="btn btn-sm btn-primary">ON</button>
         </div>
         <div class="col ml-2">
-            <button id="display_off" type="button" class="btn btn-lg btn-outline-danger">OFF</button>
+            <button id="display_off" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
         </div>
     </div>
     <div class="row mb-1" id="media-event-div">
-        <h4 class="col ml-2">Media:</h4>
+        <h7 class="col ml-2">Media:</h7>
         <div class="col ml-5">
-            <button id="media_start" type="button" class="btn btn-lg btn-primary" data-toggle="modal"
+            <button id="media_start" type="button" class="btn btn-sm btn-primary" data-toggle="modal"
                     data-target="#startMediaModal">ON
             </button>
         </div>
         <div class="col ml-2">
-            <button id="media_stop" type="button" class="btn btn-lg btn-outline-danger">OFF</button>
+            <button id="media_stop" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
         </div>
     </div>
     <div class="row mb-1" id="bugs-event-div">
-        <h4 class="col ml-2">Bugs:</h4>
+        <h7 class="col ml-2">Bugs:</h7>
         <div class="col ml-5">
-            <button id="init_bugs" type="button" class="btn btn-lg btn-primary">ON</button>
+            <button id="init_bugs" type="button" class="btn btn-sm btn-primary">ON</button>
         </div>
         <div class="col ml-2">
-            <button id="hide_bugs" type="button" class="btn btn-lg btn-outline-danger">OFF</button>
+            <button id="hide_bugs" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
         </div>
     </div>
     <div class="row mb-2">
-        <button id="calibrate" type="button" class="btn btn-lg btn-primary mx-auto">Calibrate</button>
+        <button id="calibrate" type="button" class="btn btn-sm btn-primary mx-auto">Calibrate</button>
     </div>
     <div class="row mb-2">
-        <button id="reward" type="button" class="btn btn-lg btn-primary mx-auto">Reward</button>
+        <button id="reward" type="button" class="btn btn-sm btn-primary mx-auto">Reward</button>
     </div>
     <div class="row mb-2">
-        <button id="reloadApp" type="button" class="btn btn-lg btn-primary mx-auto">Reload App</button>
+        <button id="reloadApp" type="button" class="btn btn-sm btn-primary mx-auto">Reload App</button>
     </div>
 
 </div>
