--- a/Arena/templates/management/start_experiment.html
+++ b/Arena/templates/management/start_experiment.html
@@ -1,5 +1,5 @@
 <form class="col-md-5" id="experiment_form">
-    <h3>Start Experiment</h3>
+    <h4>Start Experiment</h4>
 <!--    <div class="form-group row pr-3">-->
 <!--        <label for="experimentName" class="col col-form-label">Experiment Name</label>-->
 <!--        <div class="col-sm-7">-->
@@ -19,7 +19,7 @@
             <input type="number" class="form-control" id="numBlocks" value="1" required>
         </div>
     </div>
-    <div class="form-group row pr-3">
+    <div class="form-group row pr-3" id="timeBetweenBlocksDiv">
         <label for="timeBetweenBlocks" class="col col-form-label">Time Between Blocks [seconds]</label>
         <div class="col-sm-5">
             <input type="number" class="form-control" id="timeBetweenBlocks" value="180" required>
@@ -94,7 +94,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group row pr-3">
+                    <div class="form-group row pr-3 bugs-options{{i}}">
                         <label for="rewardAnyTouchProb{{i}}" class="col col-form-label">Any Touch Reward Probability</label>
                         <div class="col-sm-5">
                             <input type="number" step=0.01 max=1 min=0 class="form-control" id="rewardAnyTouchProb{{i}}" value="0" required>
@@ -205,9 +205,19 @@
         </div>
     </div>
 
-    <div style="margin-top: 1em; margin-left: 1em">
-        <div class="row" id="currentExperimentName"></div>
-        <div class="row" id="currentBlockID"></div>
+    <div style="margin-top: 1em; margin-left: 1em" class="row">
+        <div class="col">
+            <div class="row" id="currentExperimentName"></div>
+            <div class="row" id="currentBlockID"></div>
+            <div class="row" id="openAppHostDiv"></div>
+            <div class="row" id="temperatureValue"></div>
+            <div class="row" id="gpuMetric"></div>
+            <div class="row" id="cpuMetric"></div>
+            <div class="row" id="memMetric"></div>
+        </div>
+        <div class="col">
+            <pre class="row" id="procCPU"></pre>
+        </div>
     </div>
 
 </form>
