--- a/Arena/templates/management/stream.html
+++ b/Arena/templates/management/stream.html
@@ -11,5 +11,7 @@
         </select>
         <button id="streamButton" type="button" class="btn btn-lg btn-primary mr-2">Stream</button>
         <button id="stopStream" type="button" class="btn btn-lg btn-outline-danger">Stop Stream</button>
+        <button id="captureImage" type="button" class="btn btn-lg btn-outline-info">Capture</button>
+        <button id="calibrate" type="button" class="btn btn-lg btn-outline-info">Calibrate</button>
     </div>
 </div>
