--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -1,18 +1,4 @@
-<form class="col-md-5" id="experiment_form">
-    <h4>Start Experiment</h4>
-<!--    <div class="form-group row pr-3">-->
-<!--        <label for="experimentName" class="col col-form-label">Experiment Name</label>-->
-<!--        <div class="col-sm-7">-->
-<!--            <input type="text" class="form-control" id="experimentName" value="{{experiment_name}}"-->
-<!--                   required>-->
-<!--        </div>-->
-<!--    </div>-->
-    <div class="form-group row pr-3">
-        <label for="animalId" class="col col-form-label">Pogona ID</label>
-        <div class="col-sm-5">
-            <input type="text" class="form-control" id="animalId" required>
-        </div>
-    </div>
+<form class="col" id="experiment_form">
     <div class="form-group row pr-3">
         <label for="numBlocks" class="col col-form-label">Number of Blocks</label>
         <div class="col-sm-5">
@@ -204,22 +190,6 @@
             </button>
         </div>
     </div>
-
-    <div style="margin-top: 1em; margin-left: 1em" class="row">
-        <div class="col">
-            <div class="row" id="currentExperimentName"></div>
-            <div class="row" id="currentBlockID"></div>
-            <div class="row" id="openAppHostDiv"></div>
-            <div class="row" id="temperatureValue"></div>
-            <div class="row" id="gpuMetric"></div>
-            <div class="row" id="cpuMetric"></div>
-            <div class="row" id="memMetric"></div>
-        </div>
-        <div class="col">
-            <pre class="row" id="procCPU"></pre>
-        </div>
-    </div>
-
 </form>
 
 <!-- Load Experiment -->
